Adds documentation comments